Bug 427868 - Report: Double values "Investments Holdings Pie"
Summary: Report: Double values "Investments Holdings Pie"
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.8
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-17 14:45 UTC by michael.spahr
Modified: 2024-12-19 10:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michael.spahr 2020-10-17 14:45:44 UTC
SUMMARY


STEPS TO REPRODUCE
1. Öffne Standard-Report "Tortengrafik für Investition"
1. Open the standard report ""Pie graphic for investment""

OBSERVED RESULT
Die angezeigten Werte entsprechen das doppelte der Investitionswerte
The displayed values ​​correspond to twice the investment values

EXPECTED RESULT
Die Werte der tatsächlichen Investitionen sollen angezeigt werden.
The values ​​of the actual investments should be displayed.




SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: LUbuntu 20.04
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Ist schon seit mehreren Versionen so. Und zwar seit der Einführung der "Opening" in den einzelnen Berichten

Has been like this for several versions. Since the introduction of the "Opening" in the individual reports
Comment 1 jgfolsom 2023-03-27 06:31:26 UTC
This is also happening to me on v5.1.3.

kmymoney 5.1.3
Kubuntu 20.04.6
Linux (x86_64) release 5.4.0-139-generic
KDE Frameworks 5.68.0
Qt 5.12.8 (built against 5.12.8)
The xcb windowing system

Interestingly, the default "Investment Holdings by Account" and "Investment Holdings by Type" reports show the correct values. But the default "Investment Holdings Pie" report shows values that are twice the actual values.
Comment 2 Thomas Baumgart 2023-04-01 14:13:00 UTC
Git commit 8c8ba2f817d7d6db439643563d3d46b101efb9ca by Thomas Baumgart.
Committed on 01/04/2023 at 14:12.
Pushed by tbaumgart into branch 'master'.

Don't calculate the running sum for pie chart reports

This avoids doubleing the actual value in the chart

M  +1    -2    kmymoney/plugins/views/reports/core/pivottable.cpp

https://invent.kde.org/office/kmymoney/commit/8c8ba2f817d7d6db439643563d3d46b101efb9ca
Comment 3 Thomas Baumgart 2023-04-01 14:14:12 UTC
Git commit d3c67739566da030fe2eceac4e08ab22271d6e97 by Thomas Baumgart.
Committed on 01/04/2023 at 14:13.
Pushed by tbaumgart into branch '5.1'.

Don't calculate the running sum for pie chart reports

This avoids doubleing the actual value in the chart
FIXED-IN: 5.1.4

(cherry picked from commit 8c8ba2f817d7d6db439643563d3d46b101efb9ca)

M  +1    -2    kmymoney/plugins/views/reports/core/pivottable.cpp

https://invent.kde.org/office/kmymoney/commit/d3c67739566da030fe2eceac4e08ab22271d6e97
Comment 4 jgfolsom 2023-04-01 21:06:56 UTC
Thank you, Thomas. We appreciate your hard work.