Don't calculate the running sum for pie chart reports

This avoids doubleing the actual value in the chart

BUG: 427868
FIXED-IN: 5.1.4

(cherry picked from commit 8c8ba2f817d7d6db439643563d3d46b101efb9ca)